[gd_scene load_steps=22 format=2]

[ext_resource path="res://project/UI/menus/FinalScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://project/utilities/RandomEventGenerator.tscn" type="PackedScene" id=2]
[ext_resource path="res://project/effects/SandstormParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://project/levels/scenery/Tilemap.tscn" type="PackedScene" id=4]
[ext_resource path="res://project/levels/scenery/ShallowWaterTilemap.tscn" type="PackedScene" id=5]
[ext_resource path="res://project/levels/LevelUI.gd" type="Script" id=6]
[ext_resource path="res://project/shaders/FireShader.shader" type="Shader" id=7]
[ext_resource path="res://project/utilities/AceTimeController.tscn" type="PackedScene" id=8]
[ext_resource path="res://project/levels/scenery/CliffTileset.tscn" type="PackedScene" id=9]
[ext_resource path="res://project/utilities/PauseController.tscn" type="PackedScene" id=10]
[ext_resource path="res://project/UI/BattleUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://project/entities/enemy/EnemyBase.tscn" type="PackedScene" id=12]
[ext_resource path="res://project/entities/player/Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://project/UI/menus/MessageShower.tscn" type="PackedScene" id=14]
[ext_resource path="res://project/objects/pickables/RevolverItem.tscn" type="PackedScene" id=15]
[ext_resource path="res://project/levels/scenery/NavTransparentTile.tscn" type="PackedScene" id=16]
[ext_resource path="res://project/levels/LevelScript.gd" type="Script" id=20]
[ext_resource path="res://project/levels/scenery/LevelCamera.tscn" type="PackedScene" id=21]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/brighter_color = Color( 1, 0.8, 0, 1 )
shader_param/middle_color = Color( 1, 0.56, 0, 1 )
shader_param/darker_color = Color( 0.64, 0.2, 0.05, 1 )
shader_param/spread = 0.5

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 200 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 304, 40 )

[node name="LevelBase" type="YSort" groups=[
"Level",
]]
script = ExtResource( 20 )
ENEMY_SCENE = ExtResource( 12 )

[node name="LevelCamera" parent="." instance=ExtResource( 21 )]

[node name="PauseController" parent="." instance=ExtResource( 10 )]
pause_mode = 2

[node name="AceTimeController" parent="." instance=ExtResource( 8 )]

[node name="RandomEventGenerator" parent="." instance=ExtResource( 2 )]

[node name="EventTimer" parent="RandomEventGenerator" index="0"]
wait_time = 3.0

[node name="CooldownTimer" parent="RandomEventGenerator" index="1"]
wait_time = 4.0

[node name="LevelNavigation" type="Navigation2D" parent="." groups=[
"LevelNavigation",
]]

[node name="Ground" parent="LevelNavigation" instance=ExtResource( 4 )]
tile_data = PoolIntArray( -131075, 11, 0, -131074, 11, 65537, -131073, 11, 65536, -196608, 11, 0, -196607, 11, 0, -196606, 11, 0, -196605, 11, 0, -196604, 11, 0, -196603, 11, 0, -196602, 11, 0, -196601, 11, 65538, -196600, 11, 0, -196599, 11, 0, -196598, 11, 0, -196597, 11, 0, -196596, 11, 0, -196595, 11, 0, -196594, 11, 0, -196593, 11, 3, -196592, 11, 0, -196591, 11, 0, -196590, 11, 0, -196589, 11, 0, -196588, 11, 0, -196587, 11, 0, -196586, 11, 65536, -196585, 11, 3, -196584, 11, 0, -196583, 11, 0, -196582, 11, 3, -196581, 11, 0, -196580, 11, 3, -196579, 11, 0, -196578, 11, 3, -196577, 11, 65536, -196576, 11, 65536, -196575, 11, 65540, -196574, 11, 0, -65539, 11, 65536, -65538, 11, 0, -65537, 11, 2, -131072, 11, 0, -131071, 11, 2, -131070, 11, 4, -131069, 11, 65537, -131068, 11, 0, -131067, 11, 3, -131066, 11, 0, -131065, 11, 1, -131064, 11, 0, -131063, 11, 0, -131062, 11, 0, -131061, 11, 0, -131060, 11, 65538, -131059, 11, 0, -131058, 11, 0, -131057, 11, 0, -131056, 11, 0, -131055, 11, 0, -131054, 11, 65539, -131053, 11, 4, -131052, 11, 2, -131051, 11, 1, -131050, 11, 3, -131049, 11, 65538, -131048, 11, 0, -131047, 11, 0, -131046, 11, 0, -131045, 11, 0, -131044, 11, 0, -131043, 11, 1, -131042, 11, 65539, -131041, 11, 0, -131040, 11, 0, -131039, 11, 65540, -131038, 11, 0, -3, 11, 0, -2, 11, 2, -1, 11, 2, -65536, 11, 65538, -65535, 11, 3, -65534, 11, 0, -65533, 11, 0, -65532, 11, 4, -65531, 11, 0, -65530, 11, 0, -65529, 11, 65537, -65528, 11, 65540, -65527, 11, 2, -65526, 11, 0, -65525, 11, 65538, -65524, 11, 4, -65523, 11, 0, -65522, 11, 3, -65521, 11, 3, -65520, 11, 0, -65519, 11, 3, -65518, 11, 0, -65517, 11, 4, -65516, 11, 3, -65515, 11, 0, -65514, 11, 0, -65513, 11, 0, -65512, 11, 3, -65511, 11, 65537, -65510, 11, 3, -65509, 11, 2, -65508, 11, 2, -65507, 11, 0, -65506, 11, 0, -65505, 11, 0, -65504, 11, 0, -65503, 11, 65538, -65502, 11, 65540, 65533, 11, 65538, 65534, 11, 0, 65535, 11, 0, 0, 11, 2, 1, 11, 0, 2, 11, 3, 3, 11, 65536, 4, 11, 0, 5, 11, 0, 6, 11, 2, 7, 11, 0, 8, 11, 0, 9, 11, 3, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 11, 0, 14, 11, 0, 15, 11, 0, 16, 11, 3, 17, 11, 3, 18, 11, 2, 19, 11, 0, 20, 11, 65539, 21, 11, 0, 22, 11, 1, 23, 11, 65539, 24, 11, 0, 25, 11, 1, 26, 11, 0, 27, 11, 0, 28, 11, 0, 29, 11, 0, 30, 11, 0, 31, 11, 0, 32, 11, 0, 33, 11, 65536, 34, 11, 0, 131069, 11, 0, 131070, 11, 65538, 131071, 11, 0, 65536, 11, 65539, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 65538, 65541, 11, 0, 65542, 11, 4, 65543, 11, 0, 65544, 11, 0, 65545, 11, 3, 65546, 11, 1, 65547, 11, 0, 65548, 11, 0, 65549, 11, 65536, 65550, 11, 1, 65551, 11, 2, 65552, 11, 1, 65553, 11, 65539, 65554, 11, 0, 65555, 11, 0, 65556, 11, 4, 65557, 11, 0, 65558, 11, 0, 65559, 11, 65537, 65560, 11, 0, 65561, 11, 65540, 65562, 11, 0, 65563, 11, 0, 65564, 11, 65537, 65565, 11, 0, 65566, 11, 0, 65567, 11, 0, 65568, 11, 0, 65569, 11, 0, 65570, 11, 0, 196605, 11, 0, 196606, 11, 1, 196607, 11, 0, 131072, 11, 65537, 131073, 11, 2, 131074, 11, 0, 131075, 11, 0, 131076, 11, 0, 131077, 11, 4, 131078, 11, 0, 131079, 11, 0, 131080, 11, 0, 131081, 11, 0, 131082, 11, 0, 131083, 11, 0, 131084, 11, 0, 131085, 11, 0, 131086, 11, 2, 131087, 11, 2, 131088, 11, 0, 131089, 11, 0, 131090, 11, 0, 131091, 11, 0, 131092, 11, 3, 131093, 11, 4, 131094, 11, 65540, 131095, 11, 0, 131096, 11, 65536, 131097, 11, 0, 131098, 11, 0, 131099, 11, 65538, 131100, 11, 0, 131101, 11, 0, 131102, 11, 65540, 131103, 11, 3, 131104, 11, 0, 131105, 11, 0, 131106, 11, 0, 262141, 11, 0, 262142, 11, 0, 262143, 11, 0, 196608, 11, 0, 196609, 11, 2, 196610, 11, 0, 196611, 11, 0, 196612, 11, 0, 196613, 11, 2, 196614, 11, 65540, 196615, 11, 2, 196616, 11, 0, 196617, 11, 0, 196618, 11, 65536, 196619, 11, 2, 196620, 11, 0, 196621, 11, 0, 196622, 11, 65536, 196623, 11, 4, 196624, 11, 0, 196625, 11, 65539, 196626, 11, 65536, 196627, 11, 0, 196628, 11, 3, 196629, 11, 0, 196630, 11, 0, 196631, 11, 4, 196632, 11, 1, 196633, 11, 0, 196634, 11, 0, 196635, 11, 0, 196636, 11, 2, 196637, 11, 65536, 196638, 11, 0, 196639, 11, 65540, 196640, 11, 65539, 196641, 11, 0, 196642, 11, 0, 327677, 11, 65539, 327678, 11, 0, 327679, 11, 1, 262144, 11, 0, 262145, 11, 0, 262146, 11, 0, 262147, 11, 0, 262148, 11, 0, 262149, 11, 65540, 262150, 11, 65538, 262151, 11, 0, 262152, 11, 0, 262153, 11, 0, 262154, 11, 2, 262155, 11, 0, 262156, 11, 0, 262157, 11, 0, 262158, 11, 0, 262159, 11, 65537, 262160, 11, 0, 262161, 11, 0, 262162, 11, 0, 262163, 11, 0, 262164, 11, 2, 262165, 11, 0, 262166, 11, 0, 262167, 11, 2, 262168, 11, 0, 262169, 11, 0, 262170, 11, 0, 262171, 11, 2, 262172, 11, 65539, 262173, 11, 1, 262174, 11, 1, 262175, 11, 0, 262176, 11, 0, 262177, 11, 0, 262178, 11, 65536, 393213, 11, 0, 393214, 11, 65540, 393215, 11, 65540, 327680, 11, 65537, 327681, 11, 1, 327682, 11, 0, 327683, 11, 0, 327684, 11, 0, 327685, 11, 0, 327686, 11, 0, 327687, 11, 1, 327688, 11, 3, 327689, 11, 0, 327690, 11, 4, 327691, 11, 4, 327692, 11, 65539, 327693, 11, 1, 327694, 11, 1, 327695, 11, 0, 327696, 11, 0, 327697, 11, 0, 327698, 11, 65539, 327699, 11, 4, 327700, 11, 65536, 327701, 11, 0, 327702, 11, 0, 327703, 11, 65537, 327704, 11, 0, 327705, 11, 3, 327706, 11, 0, 327707, 11, 0, 327708, 11, 0, 327709, 11, 0, 327710, 11, 0, 327711, 11, 0, 327712, 11, 0, 327713, 11, 3, 327714, 11, 0, 458749, 11, 0, 458750, 11, 0, 458751, 11, 0, 393216, 11, 65538, 393217, 11, 0, 393218, 11, 0, 393219, 11, 3, 393220, 11, 65540, 393221, 11, 3, 393222, 11, 2, 393223, 11, 0, 393224, 11, 0, 393225, 11, 1, 393226, 11, 3, 393227, 11, 0, 393228, 11, 0, 393229, 11, 0, 393230, 11, 65536, 393231, 11, 0, 393232, 11, 0, 393233, 11, 0, 393234, 11, 0, 393235, 11, 2, 393236, 11, 0, 393237, 11, 4, 393238, 11, 0, 393239, 11, 0, 393240, 11, 3, 393241, 11, 3, 393242, 11, 3, 393243, 11, 0, 393244, 11, 0, 393245, 11, 4, 393246, 11, 0, 393247, 11, 2, 393248, 11, 3, 393249, 11, 1, 393250, 11, 2, 524285, 11, 0, 524286, 11, 0, 524287, 11, 0, 458752, 11, 0, 458753, 11, 0, 458754, 11, 2, 458755, 11, 3, 458756, 11, 0, 458757, 11, 0, 458758, 11, 3, 458759, 11, 0, 458760, 11, 0, 458761, 11, 65538, 458762, 11, 0, 458763, 11, 0, 458764, 11, 0, 458765, 11, 3, 458766, 11, 0, 458767, 11, 0, 458768, 11, 0, 458769, 11, 0, 458770, 11, 1, 458771, 11, 0, 458772, 11, 0, 458773, 11, 0, 458774, 11, 1, 458775, 11, 0, 458776, 11, 2, 458777, 11, 0, 458778, 11, 0, 458779, 11, 4, 458780, 11, 0, 458781, 11, 65537, 458782, 11, 2, 458783, 11, 0, 458784, 11, 1, 458785, 11, 3, 458786, 11, 2, 589821, 11, 0, 589822, 11, 0, 589823, 11, 3, 524288, 11, 0, 524289, 11, 4, 524290, 11, 3, 524291, 11, 65538, 524292, 11, 3, 524293, 11, 2, 524294, 11, 0, 524295, 11, 2, 524296, 11, 65537, 524297, 11, 0, 524298, 11, 0, 524299, 11, 3, 524300, 11, 0, 524301, 11, 0, 524302, 11, 0, 524303, 11, 0, 524304, 11, 65540, 524305, 11, 0, 524306, 11, 0, 524307, 11, 0, 524308, 11, 0, 524309, 11, 0, 524310, 11, 0, 524311, 11, 0, 524312, 11, 1, 524313, 11, 65536, 524314, 11, 0, 524315, 11, 0, 524316, 11, 4, 524317, 11, 0, 524318, 11, 65536, 524319, 11, 2, 524320, 11, 1, 524321, 11, 0, 524322, 11, 0, 655357, 11, 0, 655358, 11, 0, 655359, 11, 65536, 589824, 11, 2, 589825, 11, 2, 589826, 11, 1, 589827, 11, 0, 589828, 11, 65536, 589829, 11, 0, 589830, 11, 3, 589831, 11, 65537, 589832, 11, 0, 589833, 11, 2, 589834, 11, 0, 589835, 11, 0, 589836, 11, 0, 589837, 11, 0, 589838, 11, 0, 589839, 11, 0, 589840, 11, 0, 589841, 11, 0, 589842, 11, 3, 589843, 11, 0, 589844, 11, 0, 589845, 11, 3, 589846, 11, 65539, 589847, 11, 1, 589848, 11, 0, 589849, 11, 65540, 589850, 11, 65537, 589851, 11, 4, 589852, 11, 4, 589853, 11, 65538, 589854, 11, 0, 589855, 11, 0, 589856, 11, 0, 589857, 11, 0, 589858, 11, 65536, 720893, 11, 65536, 720894, 11, 0, 720895, 11, 3, 655360, 11, 0, 655361, 11, 4, 655362, 11, 0, 655363, 11, 65536, 655364, 11, 4, 655365, 11, 0, 655366, 11, 0, 655367, 11, 2, 655368, 11, 3, 655369, 11, 0, 655370, 11, 0, 655371, 11, 0, 655372, 11, 0, 655373, 11, 65540, 655374, 11, 0, 655375, 11, 65538, 655376, 11, 4, 655377, 11, 0, 655378, 11, 0, 655379, 11, 0, 655380, 11, 0, 655381, 11, 0, 655382, 11, 0, 655383, 11, 0, 655384, 11, 0, 655385, 11, 0, 655386, 11, 0, 655387, 11, 0, 655388, 11, 4, 655389, 11, 0, 655390, 11, 1, 655391, 11, 0, 655392, 11, 4, 655393, 11, 65538, 655394, 11, 0, 786429, 11, 0, 786430, 11, 0, 786431, 11, 65537, 720896, 11, 4, 720897, 11, 0, 720898, 11, 0, 720899, 11, 0, 720900, 11, 65540, 720901, 11, 0, 720902, 11, 0, 720903, 11, 0, 720904, 11, 4, 720905, 11, 0, 720906, 11, 0, 720907, 11, 0, 720908, 11, 3, 720909, 11, 0, 720910, 11, 0, 720911, 11, 3, 720912, 11, 65537, 720913, 11, 65540, 720914, 11, 0, 720915, 11, 0, 720916, 11, 65538, 720917, 11, 0, 720918, 11, 0, 720919, 11, 0, 720920, 11, 1, 720921, 11, 4, 720922, 11, 0, 720923, 11, 65540, 720924, 11, 3, 720925, 11, 3, 720926, 11, 0, 720927, 11, 0, 720928, 11, 0, 720929, 11, 2, 720930, 11, 1, 851965, 11, 0, 851966, 11, 3, 851967, 11, 0, 786432, 11, 0, 786433, 11, 65538, 786434, 11, 0, 786435, 11, 0, 786436, 11, 0, 786437, 11, 4, 786438, 11, 0, 786439, 11, 0, 786440, 11, 0, 786441, 11, 0, 786442, 11, 0, 786443, 11, 0, 786444, 11, 0, 786445, 11, 65539, 786446, 11, 0, 786447, 11, 4, 786448, 11, 65536, 786449, 11, 0, 786450, 11, 0, 786451, 11, 2, 786452, 11, 4, 786453, 11, 0, 786454, 11, 0, 786455, 11, 3, 786456, 11, 0, 786457, 11, 1, 786458, 11, 0, 786459, 11, 2, 786460, 11, 0, 786461, 11, 0, 786462, 11, 0, 786463, 11, 1, 786464, 11, 0, 786465, 11, 0, 786466, 11, 0, 917501, 11, 2, 917502, 11, 3, 917503, 11, 0, 851968, 11, 0, 851969, 11, 0, 851970, 11, 0, 851971, 11, 0, 851972, 11, 1, 851973, 11, 0, 851974, 11, 4, 851975, 11, 0, 851976, 11, 0, 851977, 11, 65538, 851978, 11, 0, 851979, 11, 0, 851980, 11, 3, 851981, 11, 1, 851982, 11, 0, 851983, 11, 1, 851984, 11, 0, 851985, 11, 1, 851986, 11, 0, 851987, 11, 65536, 851988, 11, 0, 851989, 11, 4, 851990, 11, 0, 851991, 11, 3, 851992, 11, 0, 851993, 11, 0, 851994, 11, 0, 851995, 11, 0, 851996, 11, 1, 851997, 11, 3, 851998, 11, 0, 851999, 11, 65537, 852000, 11, 3, 852001, 11, 65538, 852002, 11, 65539, 983037, 11, 0, 983038, 11, 65540, 983039, 11, 65537, 917504, 11, 0, 917505, 11, 65539, 917506, 11, 0, 917507, 11, 65539, 917508, 11, 3, 917509, 11, 0, 917510, 11, 1, 917511, 11, 0, 917512, 11, 2, 917513, 11, 0, 917514, 11, 0, 917515, 11, 4, 917516, 11, 3, 917517, 11, 3, 917518, 11, 4, 917519, 11, 0, 917520, 11, 65538, 917521, 11, 0, 917522, 11, 0, 917523, 11, 0, 917524, 11, 0, 917525, 11, 65540, 917526, 11, 0, 917527, 11, 2, 917528, 11, 65539, 917529, 11, 0, 917530, 11, 0, 917531, 11, 4, 917532, 11, 0, 917533, 11, 65539, 917534, 11, 0, 917535, 11, 4, 917536, 11, 3, 917537, 11, 0, 917538, 11, 0, 1048573, 11, 65536, 1048574, 11, 0, 1048575, 11, 0, 983040, 11, 2, 983041, 11, 2, 983042, 11, 0, 983043, 11, 0, 983044, 11, 0, 983045, 11, 0, 983046, 11, 2, 983047, 11, 0, 983048, 11, 0, 983049, 11, 0, 983050, 11, 0, 983051, 11, 0, 983052, 11, 0, 983053, 11, 2, 983054, 11, 0, 983055, 11, 0, 983056, 11, 1, 983057, 11, 65538, 983058, 11, 0, 983059, 11, 0, 983060, 11, 2, 983061, 11, 3, 983062, 11, 0, 983063, 11, 0, 983064, 11, 0, 983065, 11, 0, 983066, 11, 0, 983067, 11, 4, 983068, 11, 0, 983069, 11, 4, 983070, 11, 0, 983071, 11, 65536, 983072, 11, 0, 983073, 11, 0, 983074, 11, 0, 1114109, 11, 0, 1114110, 11, 0, 1114111, 11, 65539, 1048576, 11, 0, 1048577, 11, 4, 1048578, 11, 0, 1048579, 11, 0, 1048580, 11, 0, 1048581, 11, 0, 1048582, 11, 0, 1048583, 11, 2, 1048584, 11, 2, 1048585, 11, 0, 1048586, 11, 0, 1048587, 11, 65537, 1048588, 11, 0, 1048589, 11, 0, 1048590, 11, 0, 1048591, 11, 0, 1048592, 11, 0, 1048593, 11, 0, 1048594, 11, 0, 1048595, 11, 4, 1048596, 11, 0, 1048597, 11, 65539, 1048598, 11, 1, 1048599, 11, 2, 1048600, 11, 4, 1048601, 11, 2, 1048602, 11, 0, 1048603, 11, 4, 1048604, 11, 3, 1048605, 11, 1, 1048606, 11, 0, 1048607, 11, 3, 1048608, 11, 65539, 1048609, 11, 3, 1048610, 11, 0, 1179645, 11, 0, 1179646, 11, 0, 1179647, 11, 0, 1114112, 11, 0, 1114113, 11, 4, 1114114, 11, 2, 1114115, 11, 65539, 1114116, 11, 0, 1114117, 11, 4, 1114118, 11, 65537, 1114119, 11, 0, 1114120, 11, 0, 1114121, 11, 0, 1114122, 11, 65539, 1114123, 11, 0, 1114124, 11, 3, 1114125, 11, 0, 1114126, 11, 0, 1114127, 11, 2, 1114128, 11, 3, 1114129, 11, 0, 1114130, 11, 0, 1114131, 11, 0, 1114132, 11, 65540, 1114133, 11, 0, 1114134, 11, 65536, 1114135, 11, 1, 1114136, 11, 0, 1114137, 11, 65540, 1114138, 11, 0, 1114139, 11, 65539, 1114140, 11, 0, 1114141, 11, 0, 1114142, 11, 0, 1114143, 11, 65538, 1114144, 11, 0, 1114145, 11, 0, 1114146, 11, 65540, 1245181, 11, 0, 1245182, 11, 1, 1245183, 11, 3, 1179648, 11, 65539, 1179649, 11, 0, 1179650, 11, 0, 1179651, 11, 65539, 1179652, 11, 0, 1179653, 11, 0, 1179654, 11, 0, 1179655, 11, 0, 1179656, 11, 1, 1179657, 11, 0, 1179658, 11, 0, 1179659, 11, 65536, 1179660, 11, 65540, 1179661, 11, 0, 1179662, 11, 0, 1179663, 11, 65540, 1179664, 11, 1, 1179665, 11, 65539, 1179666, 11, 65539, 1179667, 11, 0, 1179668, 11, 0, 1179669, 11, 1, 1179670, 11, 0, 1179671, 11, 0, 1179672, 11, 2, 1179673, 11, 0, 1179674, 11, 0, 1179675, 11, 0, 1179676, 11, 3, 1179677, 11, 65537, 1179678, 11, 65540, 1179679, 11, 2, 1179680, 11, 0, 1179681, 11, 1, 1179682, 11, 4, 1310717, 11, 0, 1310718, 11, 0, 1310719, 11, 0, 1245184, 11, 1, 1245185, 11, 0, 1245186, 11, 0, 1245187, 11, 4, 1245188, 11, 65537, 1245189, 11, 65539, 1245190, 11, 65537, 1245191, 11, 65540, 1245192, 11, 0, 1245193, 11, 0, 1245194, 11, 0, 1245195, 11, 2, 1245196, 11, 65539, 1245197, 11, 1, 1245198, 11, 65540, 1245199, 11, 4, 1245200, 11, 65538, 1245201, 11, 0, 1245202, 11, 0, 1245203, 11, 65539, 1245204, 11, 2, 1245205, 11, 3, 1245206, 11, 0, 1245207, 11, 0, 1245208, 11, 0, 1245209, 11, 0, 1245210, 11, 0, 1245211, 11, 0, 1245212, 11, 65537, 1245213, 11, 0, 1245214, 11, 0, 1245215, 11, 0, 1245216, 11, 2, 1245217, 11, 0, 1245218, 11, 0, 1376253, 11, 0, 1376254, 11, 0, 1376255, 11, 0, 1310720, 11, 0, 1310721, 11, 0, 1310722, 11, 0, 1310723, 11, 4, 1310724, 11, 65536, 1310725, 11, 65537, 1310726, 11, 0, 1310727, 11, 0, 1310728, 11, 1, 1310729, 11, 0, 1310730, 11, 0, 1310731, 11, 0, 1310732, 11, 65536, 1310733, 11, 1, 1310734, 11, 0, 1310735, 11, 1, 1310736, 11, 65536, 1310737, 11, 0, 1310738, 11, 0, 1310739, 11, 65536, 1310740, 11, 3, 1310741, 11, 0, 1310742, 11, 4, 1310743, 11, 4, 1310744, 11, 0, 1310745, 11, 4, 1310746, 11, 2, 1310747, 11, 2, 1310748, 11, 65537, 1310749, 11, 0, 1310750, 11, 0, 1310751, 11, 4, 1310752, 11, 1, 1310753, 11, 0, 1310754, 11, 0 )

[node name="Buildings" parent="LevelNavigation" instance=ExtResource( 4 )]

[node name="ShallowWaterTilemap" parent="LevelNavigation" instance=ExtResource( 5 )]

[node name="CliffTileset" parent="LevelNavigation" instance=ExtResource( 9 )]

[node name="NavTransparentTile" parent="LevelNavigation" instance=ExtResource( 16 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="BattleUI" parent="UI" instance=ExtResource( 11 )]

[node name="MessageShower" parent="UI" instance=ExtResource( 14 )]
visible = false

[node name="FinalScreen" parent="UI" instance=ExtResource( 1 )]
visible = false

[node name="FireEffect" type="ColorRect" parent="UI"]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 13 )]
position = Vector2( 48, 64 )

[node name="EnemySpawnPositions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="EnemySpawnPositions"]
position = Vector2( 216, 64 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RevolverItem" parent="." instance=ExtResource( 15 )]
position = Vector2( 128, 64 )

[node name="SandstormHandler" parent="." instance=ExtResource( 3 )]

[node name="StrongSandstorm" parent="SandstormHandler" index="1"]
visible = false

[node name="CheatBorders" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="Left" type="CollisionShape2D" parent="CheatBorders"]
position = Vector2( -48, 152 )
shape = SubResource( 2 )

[node name="Top" type="CollisionShape2D" parent="CheatBorders"]
position = Vector2( 256, -48 )
shape = SubResource( 3 )

[node name="Bottom" type="CollisionShape2D" parent="CheatBorders"]
position = Vector2( 256, 336 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="CheatBorders"]
position = Vector2( 560, 144 )
shape = SubResource( 2 )

[node name="TurnOnTimer" type="Timer" parent="CheatBorders"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="acetime_active_changed" from="AceTimeController" to="." method="_on_AceTimeController_acetime_active_changed"]
[connection signal="event_happened" from="RandomEventGenerator" to="." method="_on_RandomEventGenerator_event_happened"]
[connection signal="request_new_level" from="UI/FinalScreen" to="." method="_on_FinalScreen_request_new_level"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="shot_himself" from="Player" to="." method="_on_Player_shot_himself"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="destroyed" from="RevolverItem" to="." method="_on_RevolverItem_destroyed"]
[connection signal="picked" from="RevolverItem" to="." method="_on_RevolverItem_picked"]
[connection signal="body_entered" from="CheatBorders" to="." method="_on_CheatBorders_body_entered"]
[connection signal="timeout" from="CheatBorders/TurnOnTimer" to="." method="_on_BordersTurnOnTimer_timeout"]

[editable path="RandomEventGenerator"]
[editable path="SandstormHandler"]
